@@ -1,3 +1,12 @@
+2021-07-08  Yijia Huang  <yijia_huang@apple.com>
+
+        Add Yijia Huang as a committer
+        https://bugs.webkit.org/show_bug.cgi?id=227814
+
+        Unreviewed.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2021-07-08  Brent Fulgham  <bfulgham@apple.com>
 
         [Cocoa] Expose SPI to opt out of Extensible SSO authentication
